--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -324,7 +324,7 @@ Dans ce cas, la relaxation permet de trouver ce point fixe.
 \end{minipage}
 \caption{Valeur de $\lvert{\hat{p}}\m{1} - p\m{1}\rvert$, resp. $\lvert{\hat{p}}\m{2} - p\m{2}\rvert$, lorsque les cartes sont organisées telles que représentées en figure \ref{fig:w006}. 
 ${\hat{p}}\m{1}$ ne dépend que de $p\m{2}$ : on peut donc tracer les quantités ci-dessus selon les deux dimensions $p\m{1}, p\m{2}$ pour chaque carte. Les zones où cette valeur est nulle sont en violet sur le graphique. Les points fixes, s'il existent, sont aux positions de différence nulle à la fois pour $M\m{1}$ et $M\m{2}$. Les points noirs représentent les points d'arrivée de la relaxation pour 200 trajectoires de relaxation, lancées pour différents $\bmu_0\m{1}, \bmu_0\m{2}$, dont 10 sont tracées sur le graphique. Toutes ces trajectoires de relaxation convergent vers un même point qui est l'unique point fixe de la fonction de relaxation $p\m{1}, p\m{2} \rightarrow \lvert{\hat{p}}\m{1} - p\m{1}\rvert, \lvert{\hat{p}}\m{2} - p\m{2}\rvert$
-\label{fig:diff_relax_notraj}
+\label{fig:diff_relax_notraj}}
 \end{figure}
 
 \begin{figure}
