--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-\addbibresource{./Biblio/biblio.bib}
+%\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
